chore: remove custom newsletter signup flow
